# atlas

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  BUGS.md  CLAUDE.md  LICENSE  OnePager.md  README.md  config.example.json  noxfile.py  pyproject.toml
.claude/skills/research/: SKILL.md
backend/: run.py
backend/arxiv_digest/: __init__.py  app.py  arxiv_client.py  cache.py  config.py  embeddings.py  figures.py  graph.py  pipeline.py  search.py  semantic_scholar.py  store.py  summarizer.py  taxonomy.py  teacher.py
backend/arxiv_digest/integrations/: __init__.py  arxiv_client.py  figures.py  fulltext.py  semantic_scholar.py  taxonomy.py
backend/arxiv_digest/routes/: __init__.py  graph.py  search.py  sessions.py  sources.py  teacher.py
backend/arxiv_digest/services/: __init__.py  graph.py  search.py
backend/arxiv_digest/storage/: __init__.py  cache.py  sessions.py
backend/arxiv_digest/teacher/: __init__.py  agentic.py  backends.py  common.py  lecture.py  neighbors.py  qa.py  sources_chat.py  tools.py
docs/: bugs.md  citation-coverage.md  configuration.md  constants.md  history.md  landmark-vocabulary.md  licensing.md  openalex-arxiv-touchpoints.md  pdf-mining.md  predict-vs-compute.md
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Atlas.tsx  CategoryFilter.tsx  CategoryPicker.tsx  GraphExplorer.tsx  LibraryChat.tsx  README.md  Teacher.tsx  api.ts  atlas.css  index.css  main.tsx
frontend/src/api/: README.md  agents.ts  graph.ts  index.ts  search.ts  sessions.ts  settings.ts  sources.ts  sse.ts  teacher.ts
frontend/src/detail/: DetailPanel.tsx  README.md  detail.css  useSelection.ts
frontend/src/explorer/: DetailPanel.tsx  GraphControls.tsx  HitList.tsx  Legend.tsx  model.ts
frontend/src/figures/: Lightbox.tsx  README.md
frontend/src/graph/: GraphCanvas.tsx  GraphControls.tsx  GraphExplorer.tsx  Legend.tsx  README.md  buildShape.ts  clusterForce.ts  graph.css  model.ts  theme.ts  useDiscovery.ts  usePinning.ts  useTimeline.ts
frontend/src/header/: AtlasHeader.tsx  README.md  header.css
frontend/src/notation/: MathText.tsx  README.md  latexToUnicode.ts  splitMath.ts
frontend/src/search/: HitList.tsx  README.md  Search.tsx  search.css  useSeedSearch.ts
frontend/src/sessions/: README.md  Sessions.tsx  sessions.css
frontend/src/settings/: README.md  SettingsModal.tsx  settings.css
frontend/src/store/: README.md  highlight.ts  index.ts  library.ts  transcript.ts  workspace.ts
frontend/src/teacher/: LibraryChat.tsx  README.md  ScopePicker.tsx  Teacher.tsx  library-chat.css  teacher.css  useConversation.ts
frontend/src/tour/: README.md  Tour.tsx  steps.ts  tour.css
frontend/src/ui/: README.md  theme.ts  useResizablePanel.ts
frontend/test/detail/: DetailPanel.test.tsx  SummarySection.test.tsx
frontend/test/graph/: buildShape.test.ts  clusterForce.test.ts  model.test.ts
frontend/test/notation/: latexToUnicode.test.ts  splitMath.test.ts
frontend/test/settings/: SettingsModal.test.tsx
frontend/test/store/: library.test.ts  transcript.test.ts  workspace.test.ts
frontend/test/teacher/: ScopePicker.test.tsx
frontend/test/tour/: Tour.test.tsx
frontend/test/ui/: theme.test.ts  useResizablePanel.test.tsx
ml_pipelines/: README.md  __init__.py
ml_pipelines/cite_budget/: README.md  __init__.py  collect.py  corpus.csv  features.py  train.py
ml_pipelines/models/: README.md
research/: README.md
research/citation_coverage/: README.md  analyze.ipynb
research/cite_budget/: README.md  analyze.ipynb
research/landmark_selection/: README.md
research/landmark_threshold/: README.md  analyze.ipynb
research/latest_gap/: README.md  analyze.ipynb
research/live_pool_validation/: README.md  analyze.ipynb
src/arxiv_digest/: README.md  app.py  cli.py  config.py
src/arxiv_digest/agents/: README.md  __init__.py  events.py  models.py  prompts.py  streams.py  traversal.py
src/arxiv_digest/integrations/: README.md  __init__.py  arxiv_client.py  huggingface.py  taxonomy.py
src/arxiv_digest/routes/: README.md  __init__.py  agents.py  graph.py  search.py  sources.py  sse.py  teacher.py
src/arxiv_digest/services/: README.md  __init__.py  graph.py  model.py  search.py
src/arxiv_digest/sources/: README.md  embeddings.py  extract.py  ingest.py  retrieval.py  store.py
src/arxiv_digest/storage/: README.md  _sqlite.py  cache.py  sessions.py
src/arxiv_digest/teacher/: __init__.py  agentic.py  tools.py
src/atlas/: README.md  __init__.py  app.py  cli.py  config.py
src/atlas/agents/: README.md  __init__.py  captions.py  events.py  factory.py  library_figures.py  models.py  prompts.py  streams.py  traversal.py
src/atlas/integrations/: README.md  __init__.py  caps.py
src/atlas/routes/: README.md  __init__.py  agents.py  graph.py  search.py  sessions.py  settings.py  sources.py  sse.py
src/atlas/services/: README.md  __init__.py
src/atlas/storage/: README.md  __init__.py  cache.py  sessions.py  utils.py
src/ml_pipelines/: README.md  __init__.py
src/ml_pipelines/cite_budget/: README.md  __init__.py  collect.py  corpus.csv  features.py  model.joblib  model.metadata.json  train.py
src/ml_pipelines/landmark_threshold/: README.md  __init__.py  collect_s2.py  model_s2.joblib  model_s2.metadata.json  train_s2.py
src/ml_pipelines/latest_gap/: README.md  __init__.py  collect.py  corpus.csv  model.joblib  model.metadata.json  train.py
src/ml_pipelines/live_pool_validation/: README.md  __init__.py  collect.py  corpus.csv
test/: test_sources_hybrid.py
test/arxiv_digest/: conftest.py  test_app.py  test_cli.py  test_config.py  test_smoke.py
test/arxiv_digest/agents/: test_events.py  test_prompts.py  test_traversal.py
test/arxiv_digest/integrations/: test_arxiv_client.py  test_huggingface.py  test_semantic_scholar.py  test_taxonomy.py
test/arxiv_digest/routes/: conftest.py  test_agents.py  test_graph.py  test_routes.py  test_search.py  test_sessions.py  (+1 more)
test/atlas/: conftest.py  test_app.py  test_cli.py  test_config.py
(+296 files in other folders)
