[project]
name = "atlas"
version = "4.10.0"
description = "Atlas — an interactive citation/similarity graph explorer with an AI teacher that narrates a field's history over the graph."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "pymupdf>=1.24",
    "click>=8.1",
    "huggingface-hub>=0.28",
    "pydantic-ai-slim[anthropic]>=2.5.0",
    "scikit-learn>=1.5",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.scripts]
atlas = "atlas.cli:cli"

# Standard src-layout: the package is installed (editable, by uv) from src/, so
# `import atlas` works everywhere — tests, nox sessions, the console
# script — with no sys.path shims.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[dependency-groups]
dev = [
    "nox>=2024.4",
    "mypy>=1.11",
    "pytest>=8.0",
    "pre-commit>=3.7",
    "pydoclint>=0.9",
]
# Offline analysis notebooks in research/ — opt-in via `uv run --group research`
# (not part of the default sync; the app never imports these). scikit-learn /
# joblib / numpy are runtime deps now (the app loads the trained model), so they
# aren't repeated here — only the notebook-only libs are.
research = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

# --- quality tooling (all driven by `uv run nox`) ---

[tool.mypy]
files = ["src/atlas"]
mypy_path = "src"
# 3.12+: our floor is 3.11, but installed third-party stubs (numpy, pulled in by
# sentence-transformers) use 3.12 `type` syntax that mypy won't parse under an
# older target. We run on 3.14, so this is honest.
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
# The 2026-07-04 baseline burndown removed every disabled error code (the four
# lenient-era codes are gone) and turned on untyped-body checking. Keep it that
# way: new code should type-check clean, no new disable_error_code entries.
check_untyped_defs = true

[tool.pytest.ini_options]
# Tests live in test/, mirroring src/atlas/ (and test/ml_pipelines/ mirrors the
# top-level ml_pipelines/ training pipeline). The app package comes from the
# editable install (src-layout); pythonpath is belt-and-braces for running
# pytest outside a synced uv env — "src" for the app, "." so the repo-root
# ``ml_pipelines`` package (not installed) imports too.
testpaths = ["test"]
pythonpath = ["src", "."]
# Test dirs have no __init__.py, so as source packages keep splitting into
# submodules (semantic_scholar/client.py, arxiv/client.py, ...), two
# test files can end up sharing a basename in different directories.
# importlib import mode resolves each by its full path instead of by
# basename, so that's a non-issue rather than a collision to avoid by hand.
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes (F), import sorting (I), pycodestyle (E) minus line-length (E501,
# left to the formatter's judgement), and pydocstyle (D): every module, class,
# and function must carry a docstring, Google-style. Completeness of the
# Args/Returns/Raises sections is pydoclint's job (see its pre-commit hook).
select = ["E", "F", "I", "D"]
# D205 (one-line summary + blank line) is deliberately off: the house style
# opens docstrings with a flowing multi-sentence paragraph, and flattening
# those to a single line would make the docs worse, not better.
ignore = ["E501", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Args/Returns/Raises COMPLETENESS (ruff's D rules only check presence/format).
# Types stay out of docstrings on purpose — the annotations own them — so the
# type-matching checks are off; what's enforced is that every section exists
# and matches the signature/body.
[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
skip-checking-short-docstrings = true
# The house style documents PROPAGATED exceptions too (a client wrapper's
# "Raises: S2Error" is the caller's contract even though the raise lives in a
# callee) — pydoclint only accepts lexical `raise` statements, so its raises
# checks would outlaw exactly the docs we want. Raises stays human-judged.
skip-checking-raises = true
# ruff's D107 requires __init__ docstrings; don't let pydoclint fight it.
allow-init-docstring = true
show-filenames-in-every-violation-message = true
quiet = true

[tool.ruff.lint.per-file-ignores]
# Tests document themselves at the test-name + docstring level; don't demand
# module/function docstrings for every tiny fixture and case.
"test/**" = ["D"]
"noxfile.py" = ["D"]
